# delta

./: .editorconfig  .flake8  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .pylintrc  .style.yapf  .travis.yml  .vimrc  CONTRIBUTING.md  COUNTRIBUTING.md  MAINTAINERS  README.md  RELEASE-MANAGEMENT.md  RELEASE.md  build_pip_pkg.sh  codefresh.yml  env.sh  setup.py
.github/: pull_request_template.md  stale.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.pip/: pip.conf
core/ops/: Makefile  __init__.py  build.sh  gen_build.py  py_x_ops.py
delta/: __init__.py  compat.py  compat_test.py  main.py
delta-serving/: README.md  go.mod  go.sum
delta-serving/core/: delta_serving.go
delta-serving/examples/: main.go
delta/configs/: atis2_nlu_joint_lstm_crf.yml  atis_nlu_joint_lstm_crf.yml  cnn_cls_mock.yml  cnn_daily_mail_s2s_lstm.yml  cnn_daily_mail_s2s_transformer.yml  conll_2003_seq_label_bert.yml  conll_2003_seq_label_elmo.yml  conll_2003_seq_label_lstm_crf.yml  han_cls_mock.yml  nlu_joint_mock.yml  rnn_match_mock.yml  seq-label-mock.yml  seq_label_mock.yml  snli_match_rnn.yml  transformer_s2s_mock.yml  trec_text_cls_cnn.yml  yahoo_answer_text_cls_han.yml
delta/layers/: __init__.py  attention.py  base_layer.py  common_layers.py  common_layers_test.py  dynamic_pooling.py  match_pyramid.py  recurrent.py  resnet.py  sub_tf.py  transformer.py  transformer_sub.py  utils.py  utils_test.py  utils_tf.py  utils_transformer.py
delta/models/: __init__.py  asr_model.py  asr_ref_model.py  autoencoder_model.py  base_model.py  kws_model.py  multimodal_cls_model.py  resnet_model.py  speaker_cls_rawmodel.py  speech_cls_model.py  speech_cls_rawmodel.py  text_cls_model.py  text_hierarchical_model.py  text_match_base_model.py  text_match_model.py  text_nlu_joint_model.py  text_seq2seq_model.py  text_seq_label_model.py  text_seq_model.py
delta/serving/: __init__.py  base_frozen_model.py  eval_asr_pb.py  eval_speech_cls_pb.py  eval_text_cls_pb.py  knowledge_distilling.py
delta/utils/: __init__.py  cmvn.py  cmvn_test.py  config.py  config_test.py  ctc_utils.py  ctc_utils_test.py  hparam.py  hparam_test.py  logger.py  misc.py  misc_test.py  model.py  register.py  summary.py
delta2/: __init__.py  delta2.py
delta2/frontend/: analyfiltbank.py  cepstrum.py  delta_delta.py  fbank.py  fbank_pitch.py  framepow.py  framepow_test.py  pitch.py  plp.py  plp_test.py  read_wav.py  spectrum.py  spectrum_test.py  synthfiltbank.py  write_wav.py  zcr.py
delta2/layers/: base_layer.py  common_layers.py  utils.py  (+1 more)
delta_nlp.egg-info/: PKG-INFO
deltann/: Makefile  README.md  build.sh  deltann_version_script.lds  run.sh  test.sh
deltann/gcompiler/delta_infer/: CMakeLists.txt
deltann/gcompiler/delta_infer/core/: CMakeLists.txt  algorithm.h
deltann/gcompiler/delta_infer/custom_grappler/: CMakeLists.txt  auto_fusion.cc
deltann/gcompiler/delta_infer/custom_ops/: transformer_cell_nlp.cc  transformer_cell_nlp_functor.h
deltann/gcompiler/delta_infer/custom_ops/platform/CUDA/: cuda_checks.h
deltann/infer/example/c++/: CMakeLists.txt  benchmark.cc  benchmark_xi.cc  gemm_perf.cc  perf_test.cc
deltann/infer/example/c++/basic/: perf.cc  perf.h
deltann/infer/python/: .gitignore  CMakeLists.txt  setup.py
deltann/infer/python/delta_infer/: __init__.py  optimizer.py  visual_pattern.py
deltann/infer/python/delta_infer/cpp/: __init__.py  delta_cpp_export_py.cc  export_utils.h
deltann/infer/python/delta_infer/subgraphs/: __init__.py
deltann/infer/python/delta_infer/subgraphs/common/: __init__.py  generator.py  summarize_graph.py
deltann/infer/python/delta_infer/subgraphs/transformer/: model.py  transformer.py
docker/: build.sh  dockerfile.ci.cpu  dockerfile.delta.cpu  dockerfile.delta.gpu  dockerfile.deltann.cpu  dockerfile.deltann.gpu  gen_dockerfile.sh  install.sh  install_user.sh  requirements.txt  run.sh  sources.list.ubuntu18.04
docs/: Makefile  conf.py  faq.md  index.rst  introduction.md  references.md  released_models.md  roadmap.md  version.md
dpl/: README.md  run.sh
egs/: README.md  aishell  ami  an4  babel  chime4  chime5  csj  fisher_callhome_spanish  fisher_callhome_spanish_st  fisher_swbd  hkust  hub4_spanish  iwslt18st  jsalt18e2e  jsut  li10  librispeech  ljspeech  m_ailabs  reverb  swbd  tedlium  voxforge  wsj  wsj_mix  yesno
gcompiler/: .gitginore  CMakeLists.txt
gcompiler/cmake/: build.cmake  cuda.cmake  tensorflow.cmake
gcompiler/delta_infer/core/: debug.h
gcompiler/delta_infer/custom_grappler/: auto_fusion.h
gcompiler/delta_infer/custom_ops/: CMakeLists.txt  alloc.h  transformer_cell.cc  transformer_cell_functor.h
gcompiler/delta_infer/custom_ops/platform/CUDA/: kernels.h  transformer_functor_cu.cc  transformer_functor_nlp_cu.cc
gcompiler/delta_infer/custom_ops/platform/X86/: transformer_functor.cc
gcompiler/delta_infer/test/: CMakeLists.txt  basic_test.cc
gcompiler/example/c++/: CMakeLists.txt  benchmark.cc  gemm_perf.cc  perf_test.cc
gcompiler/example/c++/basic/: perf.cc  perf.h
gcompiler/example/python/: complex_transformer.py  tts_transformer.py
gcompiler/example/python/nlp_transformer/: model.py
gcompiler/example/python/standard_transformer/: train.py
gcompiler/install/: bench.sh  build_gpu.sh  install.md  viewgraph.sh
gcompiler/python/: CMakeLists.txt  setup.py
gcompiler/python/delta_infer/: visual_pattern.py
gcompiler/python/delta_infer/cpp/: delta_cpp_export_py.cc  export_utils.h
gcompiler/python/delta_infer/subgraphs/common/: __init__.py
gcompiler/python/delta_infer/subgraphs/transformer/: transformer.py
ops/: .gitignore  Makefile  build.sh  cppjieba  py_x_ops.py
tools/: .gitignore  Makefile  format.sh  install-delta.sh  install-deltann.sh  release_notes.py  requirements.txt  test.sh  valgrind.sh
transform/: __init__.py
utils/: avg_checkpoints.py  dump.sh  espnet_tools  espnet_utils  eval_pb.py  frozen_saved_model.sh  inspect_saved_model.sh  pb_pbtxt.py  prep_ctc_trans.py  replace_custom_op_attr_pbtxt.py  replace_custom_op_attr_pbtxt_test.py  run_saved_model.py  subset_data_dir_tr_cv.py
(+975 files in other folders)
